--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <title>Vite + React</title>
 </head>
 
-<body>
+<body style="overflow-x: hidden;">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
